@@ -124,6 +124,15 @@ class ActionPackAssertionsController < ActionController::Base
   def rescue_action(e) raise; end
 end
 
+# Used to test that assert_response includes the exception message
+# in the failure message when an action raises and assert_response
+# is expecting something other than an error.
+class AssertResponseWithUnexpectedErrorController < ActionController::Base
+  def index
+    raise 'FAIL'
+  end
+end
+
 module Admin
   class InnerModuleController < ActionController::Base
     def index
@@ -464,6 +473,15 @@ class ActionPackAssertionsControllerTest < Test::Unit::TestCase
       assert false
     rescue Test::Unit::AssertionFailedError => e
     end
+  end
+
+  def test_assert_response_uses_exception_message
+    @controller = AssertResponseWithUnexpectedErrorController.new
+    get :index
+    assert_response :success
+    flunk 'Expected non-success response'
+  rescue Test::Unit::AssertionFailedError => e
+    assert e.message.include?('FAIL')
   end
 end
 
